<?xml version="1.0"?>
<package format="2">
  <name>vl53l0x_ros</name>
  <version>0.0.0</version>
  <description>The master_control package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="Mike@todo.todo">Mike</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>roscpp</depend>
</package>
